=================
Changes for crash
=================

Unreleased
==========

2018/10/04 0.24.2
=================

- Fixed an issue that caused a crash when connecting to a CrateDB enterprise
  edition with a user that don't have ``DQL`` privileges on ``sys.cluster``.

- Fixed an issue where line comments could only be used at the beginning of a
  line and not after a partial statement.

2018/06/15 0.24.1
=================

- Fixed a dependecy problem that caused ``crash`` not being able to connect to
  CrateDB if an older version of the dependency ``crate`` was already
  installed.

2018/05/12 0.24.0
=================

 - BREAKING: Dropped support for Python 2.7 and 3.3
   If you are using crash with Python 2.7 or 3.3 already, you will not be able
   to install newer versions of this package.

 - Added support for setting the default schema for statements. This is done by
   using the ``--schema`` argument on startup.

 - Updated the ``\dt`` command to show only tables, but not views. This is to
   be forward compatible with CrateDB 3.0 and greater.

2017/12/15 0.23.0
=================

 - Added support for password authentication.

 - Added support for pasting and executing multiple statements at once.

 - The `\r` (read) command auto-completion now also shows directories, instead
   of only files ending in `.sql`

2017/11/13 0.22.3
=================

 - Fixed an error caused by using the ``\verbose`` command before using
   ``\connect`` to connect to a host.

 - Exit Crash correctly if an error occurs on startup, such as invalid host
   format or unauthorized access to CrateDB.

 - Do not show connect message on startup by default but only when starting
   crash in verbose mode. This prevents the programme from printing the message
   to stdout when using the command mode or executing ``--sysinfo``.

2017/10/11 0.22.2
=================

 - Fixed an issue where BACKSPACE would delete more characters before the
   cursor than expected.
