@@ -5,6 +5,8 @@ Changes for crash
 Unreleased
 ==========
 
+- Added support for pasting multiple statements into the crash prompt.
+
 2018/10/04 0.24.2
 =================
 
